--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -35,6 +35,9 @@ html, body{
   font-family: system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
   -webkit-text-size-adjust: 100%;
 }
+input, textarea, select{
+  font-size: 16px;
+}
 body{
   user-select: none;
   -webkit-user-select: none;
